@@ -4,6 +4,7 @@ namespace Drupal\Tests\search_api_db\Kernel;
 
 use Drupal\Component\Render\FormattableMarkup;
 use Drupal\Core\Database\Database as CoreDatabase;
+use Drupal\search_api\Entity\Index;
 use Drupal\search_api\Entity\Server;
 use Drupal\search_api\IndexInterface;
 use Drupal\search_api\Item\ItemInterface;
@@ -748,6 +749,61 @@ class BackendTest extends BackendTestBase {
     $this->assertNotEquals(GenericDatabase::class, $class);
     $this->assertSame($dbms_comp1, $service);
     $this->assertEquals($class, get_class($dbms_comp2));
+  }
+
+  /**
+   * Tests whether indexing of dates works correctly.
+   */
+  public function testDateIndexing() {
+    // Load all existing entities.
+    $storage = \Drupal::entityTypeManager()
+      ->getStorage('entity_test_mulrev_changed');
+    $storage->delete($storage->loadMultiple());
+
+    $index = Index::load('database_search_index');
+    $index->getField('name')->setType('date');
+    $index->save();
+
+    // Simulate date field creation in one timezone and indexing in another.
+    date_default_timezone_set('America/Chicago');
+
+    // Test different input values, similar to @dataProvider (but with less
+    // overhead).
+    $t = 1400000000;
+    $f = 'Y-m-d H:i:s';
+    $test_values = [
+      'null' => [NULL, NULL],
+      'timestamp' => [$t, $t],
+      'string timestamp' => ["$t", $t],
+      'float timestamp' => [$t + 0.12, $t],
+      'date string' => [gmdate($f, $t), $t],
+      'date string with timezone' => [date($f . 'P', $t), $t],
+    ];
+
+    // Get storage information for quickly checking the indexed value.
+    $db_info = $this->getIndexDbInfo();
+    $table = $db_info['index_table'];
+    $column = $db_info['field_tables']['name']['column'];
+    $sql = "SELECT $column FROM {{$table}} WHERE item_id = :id";
+
+    $id = 0;
+    date_default_timezone_set('Asia/Seoul');
+    foreach ($test_values as $label => list($field_value, $expected)) {
+      $entity = $this->addTestEntity(++$id, [
+        'name' => $field_value,
+        'type' => 'item',
+      ]);
+      $item_id = $this->getItemIds([$id])[0];
+      $index->indexSpecificItems([$item_id => $entity->getTypedData()]);
+      $args[':id'] = $item_id;
+      $indexed_value = \Drupal::database()->query($sql, $args)->fetchField();
+      if ($expected === NULL) {
+        $this->assertSame($expected, $indexed_value, "Indexing of date field with $label value.");
+      }
+      else {
+        $this->assertEquals($expected, $indexed_value, "Indexing of date field with $label value.");
+      }
+    }
   }
 
 }
