@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2945870 by Dropa, drunken monkey: Fixed timezone of indexed date strings.
 - #2948659 by drunken monkey, borisson_, bskibinski: Added support for HTML5
   placeholder in Views exposed filters.
 - #2951055 by bradjones1, borisson_, drunken monkey: Fixed documentation for
